// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorPage /> should render correctly with status code 1`] = `
<Layout>
  <Meta
    description="index:meta.description"
    title="index:meta.title"
  />
  <Translate(I18NComponent)
    statusCode={404}
  />
</Layout>
`;

exports[`<ErrorPage /> should render correctly without status code 1`] = `
<Layout>
  <Meta
    description="index:meta.description"
    title="index:meta.title"
  />
  <Translate(I18NComponent) />
</Layout>
`;
